cluster/k8s/applications/atuin/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin-postgres
  namespace: atuin
spec:
  selector:
    app: atuin-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
