cluster/k8s/applications/atuin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atuin-server
  namespace: atuin
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: atuin.allegedly.works
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - atuin.allegedly.works
      secretName: atuin-tls
  rules:
    - host: atuin.allegedly.works
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atuin-server
                port:
                  number: 8888
